--- a/views/admin_portal.ejs
+++ b/views/admin_portal.ejs
@@ -259,78 +259,6 @@
       </label>
       <button type="submit">Search</button>
     </form>
-
-    <script>
-      function dashboard() {
-        document.getElementById("dashboard").style.display = "block";
-        document.getElementById("student_form").style.display = "none";
-        document.getElementById("faculty_form").style.display = "none";
-        document.getElementById("admin_form").style.display = "none";
-        document.getElementById("club_form").style.display = "none";
-        document.getElementById("research_form").style.display = "none";
-        document.getElementById("subjects_form").style.display = "none";
-      }
-
-      function student_edit() {
-        document.getElementById("dashboard").style.display = "none";
-        document.getElementById("student_form").style.display = "block";
-        document.getElementById("faculty_form").style.display = "none";
-        document.getElementById("admin_form").style.display = "none";
-        document.getElementById("club_form").style.display = "none";
-        document.getElementById("research_form").style.display = "none";
-        document.getElementById("subjects_form").style.display = "none";
-      }
-
-      function faculty_edit() {
-        document.getElementById("dashboard").style.display = "none";
-        document.getElementById("faculty_form").style.display = "block";
-        document.getElementById("student_form").style.display = "none";
-        document.getElementById("admin_form").style.display = "none";
-        document.getElementById("club_form").style.display = "none";
-        document.getElementById("research_form").style.display = "none";
-        document.getElementById("subjects_form").style.display = "none";
-      }
-
-      function admin_edit() {
-        document.getElementById("dashboard").style.display = "none";
-        document.getElementById("admin_form").style.display = "block";
-        document.getElementById("faculty_form").style.display = "none";
-        document.getElementById("student_form").style.display = "none";
-        document.getElementById("club_form").style.display = "none";
-        document.getElementById("research_form").style.display = "none";
-        document.getElementById("subjects_form").style.display = "none";
-      }
-
-      function club_edit() {
-        document.getElementById("dashboard").style.display = "none";
-        document.getElementById("club_form").style.display = "block";
-        document.getElementById("student_form").style.display = "none";
-        document.getElementById("faculty_form").style.display = "none";
-        document.getElementById("admin_form").style.display = "none";
-        document.getElementById("research_form").style.display = "none";
-        document.getElementById("subjects_form").style.display = "none";
-      }
-
-      function research_edit() {
-        document.getElementById("dashboard").style.display = "none";
-        document.getElementById("research_form").style.display = "block";
-        document.getElementById("student_form").style.display = "none";
-        document.getElementById("faculty_form").style.display = "none";
-        document.getElementById("admin_form").style.display = "none";
-        document.getElementById("club_form").style.display = "none";
-        document.getElementById("subjects_form").style.display = "none";
-      }
-
-      function subjects_edit() {
-        document.getElementById("dashboard").style.display = "none";
-        document.getElementById("subjects_form").style.display = "block";
-        document.getElementById("student_form").style.display = "none";
-        document.getElementById("faculty_form").style.display = "none";
-        document.getElementById("admin_form").style.display = "none";
-        document.getElementById("club_form").style.display = "none";
-        document.getElementById("research_form").style.display = "none";
-      }
-    </script>
-    <main></main>
+    <script src="/js/script.js"></script>
   </body>
 </html>
