--- a/views/faculty_portal.ejs
+++ b/views/faculty_portal.ejs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="css/colors.css">
 <link rel="stylesheet" href="css/student_portal.css">
-<% var icons=["home", "school", "people_alt", "date_range", "exit_to_app"]; %>
+<% var icons=["home", "school", "grade", "people_alt", "date_range", "exit_to_app"]; %>
 <% var photo= null; %>
 <body>
   <div class="SideNavigationBar">
@@ -17,7 +17,7 @@
             <div></div>
           </div>
           <div class="IconWrap">
-            <i class="material-icons SideBarIcon" onclick=<%= "changeSelection(" + i + ")"%>><%= icons[i] %></i>
+            <i class="material-icons SideBarIcon" onclick=<%= "changeFSelection(" + i + ")"%>><%= icons[i] %></i>
           </div>
         </div>
       <%}%>
@@ -27,19 +27,19 @@
     <div class="RightBodyDiv">
       <div class="HeaderWrap">
         <div class="Header">
-          <div class="SearchBar">
-            <div style="align-self: center;">
-              <i class="material-icons" style="color: white;">search</i>
-            </div>
-          </div>
+          <!-- <div class="SearchBar"> -->
+            <!-- <div style="align-self: center;"> -->
+              <!-- <i class="material-icons" style="color: white;">search</i> -->
+            <!-- </div> -->
+          <!-- </div> -->
           <div style="display: flex;">
             <div class="HeaderIconDiv"><i class="material-icons">settings</i></div>
-            <div class="HeaderIconDiv"><i class="material-icons">notifications</i></div>
+            <!-- <div class="HeaderIconDiv"><i class="material-icons">notifications</i></div> -->
             <!-- Profile pic is here -->
             <div class="ProfilePicDiv">
               <img src="<%=photo%>" height="100%">
             </div>
-            <div class="HeaderIconDiv" style="margin: 0px"><i class="material-icons">keyboard_arrow_down</i></div>
+            <!-- <div class="HeaderIconDiv" style="margin: 0px"><i class="material-icons">keyboard_arrow_down</i></div> -->
           </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
     <% } %>
     </div>
   </div>
-  <script src="/js/student_portal.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 
 </html>
