--- a/views/faculty_portal_pages/page[1].ejs
+++ b/views/faculty_portal_pages/page[1].ejs
@@ -1,39 +1,60 @@
-<link rel="stylesheet" href="../../public/css/student_portal.css">
-<% var facultyCode, assignment_number = "ASSIGNMENTS";%>
+<link rel="stylesheet" href="../../public/css/student_portal.css" />
 <style>
   .AttendanceButton {
     display: flex;
     justify-content: flex-end;
   }
 </style>
-<div style="display: flex; flex-direction: column; width: 100%; height: 100%">
+<div style="display: flex; flex-direction: column; width: 100%; height: 100%;">
   <div class="Element">
-    <h3 style="color: var(--secondary); margin-bottom: 10px;">
-      <%=assignment_number%> <br />
+    <h3
+      style="color: var(--secondary); margin-bottom: 10px; margin-left: 150px;"
+    >
+      ADD ASSIGNMENT <br />
     </h3>
     <!-- TODO add link in action method -->
     <div style="height: 100%; flex: 2; margin: 0; align-self: center;">
-      <form action="" ; method="POST">
+      <form action="faculty_portal" method="POST">
+        <label for="category">
+          <input
+            type="text"
+            value="assignment"
+            name="category"
+            style="display: none;"
+          />
+        </label>
         <table style="border-width: 0px;">
           <tbody class="FormTbody">
             <tr>
-              <td><label>Subject Code</label></td>
-              <td><input type="text" ; placeholder="XXXNNNN" name="subjectCode"></td>
+              <td><label>Subject Code:</label></td>
+              <td>
+                <input
+                  type="text"
+                  placeholder="Subject Code"
+                  name="subject_code"
+                />
+              </td>
             </tr>
             <tr>
-              <td><label>Assignment Name</label></td>
-              <td><input type="text" ; placeholder="Assignment Name" name="assignmentName"></td>
+              <td><label>Assignment Name:</label></td>
+              <td>
+                <input
+                  type="text"
+                  placeholder="Assignment Name"
+                  name="assignment_name"
+                />
+              </td>
             </tr>
             <tr>
-              <td><label>Due Date</label></td>
-              <td><input type="text" ; placeholder="Date Format" name="dueDate"></td>
+              <td><label>Due Date:</label></td>
+              <td>
+                <input type="text" placeholder="YYYYMMMDD" name="due_date" />
+              </td>
             </tr>
             <tr>
               <td></td>
-              <td style="display: flex; justify-content: space-between;">
-                <input class="AssignmentButtons" type="submit" ; value="Add" name="action">
-                <input type="submit" ; value="Remove" name="action">
-                <input type="submit" ; value="Edit" name="action">
+              <td style="display: flex; justify-content: center;">
+                <input class="AssignmentButtons" type="submit" value="Add" />
               </td>
             </tr>
           </tbody>
@@ -42,38 +63,43 @@
     </div>
   </div>
   <div class="Element">
-    <h3 style="color: var(--secondary); margin-bottom: 10px;">ATTENDANCE</h3>
+    <h3
+      style="color: var(--secondary); margin-bottom: 10px; margin-left: 150px;"
+    >
+      FACULTY ATTENDANCE
+    </h3>
     <!-- TODO set studentCode on submission and change defaultPage to this page -->
-    <form action="" ; method="POST">
-      <table style="border-width: 0px">
+    <form action="faculty_portal" method="POST">
+      <label for="category">
+        <input
+          type="text"
+          value="fAttendance"
+          name="category"
+          style="display: none;"
+        />
+      </label>
+      <table style="border-width: 0px;">
         <tbody class="FormTbody">
-          <% if(facultyCode == null) {%>
           <tr>
-            <td><label>Faculty Code</label></td>
-            <td><input type="text" ; placeholder="Faculty code" ; name="faculty"></td>
-          </tr>
-          <tr>
-            <td><label>Timing</label></td>
-            <td><input type="text" ; placeholder="X - Y" name="timing"></td>
-          </tr>
-          <tr>
-            <td><label>Batch</label></td>
-            <td><input type="text" ; placeholder="20XXAAA" name="batch"></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td class="AttendanceButton"><input type="submit" ; value="Submit" name="action"></td>
-          </tr>
-          <% } else { %>
-          <tr>
-            <td><label>Student Roll No</label></td>
-            <td><input type="text" ; placeholder="XXXNNNN" ; name="studentRollNo"></td>
+            <td><label>Subject Code: </label></td>
+            <td>
+              <input
+                type="text"
+                ;
+                placeholder="Subject Code"
+                name="subject_code"
+              />
+            </td>
           </tr>
           <tr>
             <td></td>
-            <td class="AttendanceButton"><input type="submit" ; value="submit" name="action"></td>
+            <td
+              class="AttendanceButton"
+              style="display: flex; justify-content: center;"
+            >
+              <input type="submit" value="Submit" />
+            </td>
           </tr>
-          <% } %>
         </tbody>
       </table>
     </form>
