--- a/views/student_portal_pages/page[0].ejs
+++ b/views/student_portal_pages/page[0].ejs
@@ -1,9 +1,12 @@
 <style>
+  label {
+    margin-right: 5px;
+  }
+
   .LeftContainer {
     flex: 3;
     display: flex;
     flex-direction: column;
-    /* background-color: red; */
   }
 
   .RightContainer {
@@ -13,23 +16,59 @@
   .LeftContainer div {
     display: flex;
     width: calc(100% - 20px);
-    height: 170px;
     padding: 0px 10px;
     border-radius: 1em;
     justify-content: space-between;
-    background-color: var(--primary);
+    background-color: var(--sfTileBackground);
+    border: 2px solid var(--sfTileBorder);
     margin-bottom: 20px;
   }
 
-  .RightContainer div {
-    margin-left: 20px;
+  .RightContainer {
+    margin-left: 60px;
     border-radius: 1em;
     display: flex;
     width: calc(100% - 40px);
     flex-direction: column;
-    background-color: var(--primary);
+    border: 2px solid var(--sfTileBorder);
+    background-color: var(--sfTileBackground);
+    padding: 10px;
+  }
+
+  .RightContainer div {
+    margin-left: 10px;
+    border-radius: 1em;
+    display: flex;
+    width: calc(100% - 40px);
+    flex-direction: column;
+    background-color: var(--sfTileBackground);
     padding: 10px;
     height: calc(100% - 20px);
+  }
+
+  .UpcomingEventsDiv {
+    border: 0;
+    border-bottom: 3px solid var(--sfTileBorder);
+  }
+
+  .LeftContainer div .CollegeNewsDiv {
+    display: flex;
+    flex-direction: column;
+    width: calc(100% - 40px);
+    border-radius: 0;
+    padding-bottom: 5px;
+    border: 0;
+    border-bottom: 3px solid var(--sfTileBorder);
+  }
+
+  .CollegeNewsDiv p {
+    font-size: small;
+  }
+
+  .CollegeNewsDiv a {
+    font-size: medium;
+    text-decoration: none;
+    font-weight: bold;
   }
 </style>
 <div style="display: flex; width: 100%; justify-content: space-between;">
@@ -43,7 +82,8 @@
     </div>
     <div
       style="
-        background-color: var(--primary);
+        background-color: var(--sfTileBackground);
+        border: 2px solid var(--sfTileBorder);
         padding: 0px 30px;
         height: 100px;
         width: calc(100% - 60px);
@@ -55,49 +95,46 @@
         style="color: white; align-self: center; font-size: 60px;"
         >done_all</i
       >
-      <h2 style="margin-left: 50px; color: var(--secondary);">
+      <h2 style="margin-left: 50px; margin-top: 34px; color: var(--secondary);">
         <%=assignment_number%> are due!
       </h2>
     </div>
-    <div
-      style="
-        background-color: var(--primary);
-        flex-direction: column;
-        height: 200px;
-        margin-bottom: 0px;
-      "
-    >
+    <div style="flex-direction: column; margin-bottom: 0px;">
       <h2 style="align-self: center; color: var(--secondary);">
         College News
       </h2>
-      <p>02 May 2020</p>
-      <a
-        href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
-        style="align-self: center; color: var(--secondary);"
-        target="_blank"
-        >Essential Items Distribution Camp Organized by ABV-IIITM, Gwalior</a
-      >
-      <p>17 April 2020</p>
-      <a
-        href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/293-notice-regarding-covid-19-dated-27th-march-2020?Itemid=437"
-        style="align-self: center; color: var(--secondary);"
-        target="_blank"
-        >Notice regarding Covid-19 dated 17.04.2020</a
-      >
-      <p>27 March 2020</p>
-      <a
-        href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
-        style="align-self: center; color: var(--secondary);"
-        target="_blank"
-        >Notice regarding Covid-19 dated 27th March 2020</a
-      >
-      <p>19 March 2020</p>
-      <a
-        href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/290-notice-regarding-covid-19?Itemid=437"
-        style="align-self: center; color: var(--secondary);"
-        target="_blank"
-        >Notice Regarding COVID-19</a
-      >
+      <div class="CollegeNewsDiv">
+        <p style="color: #ffffff;">02 May 2020</p>
+        <a
+          href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
+          target="_blank"
+          >Essential Items Distribution Camp Organized by ABV-IIITM, Gwalior</a
+        >
+      </div>
+      <div class="CollegeNewsDiv">
+        <p style="color: #ffffff;">17 April 2020</p>
+        <a
+          href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/293-notice-regarding-covid-19-dated-27th-march-2020?Itemid=437"
+          target="_blank"
+          >Notice regarding Covid-19 dated 17.04.2020</a
+        >
+      </div>
+      <div class="CollegeNewsDiv">
+        <p style="color: #ffffff;">27 March 2020</p>
+        <a
+          href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
+          target="_blank"
+          >Notice regarding Covid-19 dated 27th March 2020</a
+        >
+      </div>
+      <div class="CollegeNewsDiv">
+        <p style="color: #ffffff;">19 March 2020</p>
+        <a
+          href="https://www.iiitm.ac.in/index.php/en/component/content/article/79-latest-news/290-notice-regarding-covid-19?Itemid=437"
+          target="_blank"
+          >Notice Regarding COVID-19</a
+        >
+      </div>
     </div>
   </div>
   <div class="RightContainer">
@@ -105,6 +142,30 @@
       <h2 style="align-self: center; color: var(--secondary);">
         Upcoming Events!
       </h2>
+      <div
+        class="UpcomingEventsDiv"
+        style="height: fit-content; border-radius: 0px; padding-bottom: 0px;"
+      >
+        <h2>
+          Webinar on Advanced Front End Web Development With React
+        </h2>
+      </div>
+      <div
+        class="UpcomingEventsDiv"
+        style="height: fit-content; border-radius: 0px; padding-bottom: 0px;"
+      >
+        <h2>
+          GDG Gwalior, Blockchain 101 on Tezos
+        </h2>
+      </div>
+      <div
+        class="UpcomingEventsDiv"
+        style="height: fit-content; border-radius: 0px; padding-bottom: 0px;"
+      >
+        <h2>
+          Opening Lockdown,
+        </h2>
+      </div>
     </div>
   </div>
 </div>
