--- a/views/student_portal_pages/page[3].ejs
+++ b/views/student_portal_pages/page[3].ejs
@@ -1,25 +1,50 @@
 <style>
-  .Element {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    border-radius: 1em;
-    height: 300px;
-    padding-top: 10px;
-    margin-bottom: 20px;
-    background-color: var(--primary);
-  }
+    .MyModal {
+        position: fixed;
+        display: flex;
+        width: 100vw;
+        height: 100vh;
+        top: 0%;
+        left: 0%;
+        z-index: 10;
+        align-items: center;
+        justify-content: center;
+        background-color: black;
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    .ModalContent {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 400px;
+        z-index: 11;
+        border-radius: 1em;
+        padding: 10px;
+        background-color: var(--sfTileBackground);
+        border: 2px solid var(--sfTileBorder);
+    }
+
+    .Button {
+        border-radius: 1em;
+        padding: 10px 20px;
+        background-color: var(--primary2);
+        border: 2px solid var(--sfTileBorder);
+        text-align: center;
+    }
+
+    .Button:hover {
+        cursor: pointer;
+    }
 </style>
-<div
-  style="display: flex; flex-direction: column; width: 100%; padding: 10px 0px;"
->
-  <div class="Element">
-    <h3 style="align-self: center;">Class Schedule</h3>
-    <% for (time in studentSchedule) { %>
-    <p><%=time%>: <%=studentSchedule[time]%></p>
-    <% } %>
-  </div>
-  <div class="Element" style="margin-bottom: 0px;">
-    <h3 style="align-self: center;">Academic Calendar</h3>
-  </div>
+<div class="MyModal">
+    <div class="ModalContent">
+        <h2>Are you sure you want to logout?</h2>
+        <div style="display: flex;">
+            <a href="./logout"><div class="Button" style="margin-right: 20px;"><h3>Yes</h2></div></a>
+            <div class="Button" onclick="changeToLastSSelection()"><h3>No</h3></div>
+            
+        </div>
+    </div>
 </div>
+<script src="/js/script.js"></script>
